<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_title">
        <!-- ホタル名表示に設定 -->
        <ListPreference
            android:key="list_key"
            android:title="@string/list_title"
            android:summary="@string/list_summary"
            android:entries="@array/list_entries"
            android:entryValues="@array/list_entryvalues" />
        <!-- 初期点滅秒数設定 -->
        <ListPreference
            android:key="meimetu_sec"
            android:title="@string/meimetu_sec_title"
            android:summary="@string/meimetu_sec_summary"
            android:entries="@array/list_entries2"
            android:entryValues="@array/list_entryvalues2" />
        <!-- 点滅秒数の調整幅を設定 -->
        <ListPreference
            android:key="seek_sec"
            android:title="@string/seek_sec_title"
            android:summary="@string/seek_sec_summary"
            android:entries="@array/list_entries3"
            android:entryValues="@array/list_entryvalues3"
        />
        
    </PreferenceCategory>
</PreferenceScreen>